--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "ledger-challenge",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
     "build": "nest build",
@@ -26,6 +25,8 @@
     "@nestjs/common": "^11.0.17",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
