--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,13 @@ services:
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-change_me}
-      POSTGRES_DB: ${POSTGRES_DB:-appdb}
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: ledger-db
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test:
-        [
-          'CMD-SHELL',
-          'pg_isready -U ${POSTGRES_USER:-app} -d ${POSTGRES_DB:-appdb}',
-        ]
+      test: ['CMD-SHELL', 'pg_isready -U root -d ledger-db']
       interval: 5s
       timeout: 5s
       retries: 10
